# iotscan

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docker/: mosquitto.conf
docker/iot-device/: Dockerfile  device_simulator.py
samples/: iot_device_scan.yaml
scripts/: e2e_test.sh
src/iotscan/: __init__.py  base.py  cli.py  models.py  scanner.py
src/iotscan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/iotscan/ai/: __init__.py  agent.py  prompts.py
src/iotscan/data/: __init__.py
src/iotscan/modules/: __init__.py  attack_path_mapper.py  credential_checker.py  firmware_analysis.py  network_discovery.py  ota_analyzer.py  protocol_testing.py  web_security.py
src/iotscan/reports/: __init__.py  generator.py
src/iotscan/utils/: __init__.py
tests/: test_ai_agent.py  test_attack_path_mapper.py  test_credential_checker.py  test_firmware_analysis.py  test_models.py  test_network_discovery.py  test_ota_analyzer.py  test_protocol_testing.py  test_scanner.py  test_web_security.py
